--- a/profile.html
+++ b/profile.html
@@ -126,7 +126,7 @@
                             <h4 class="c-grey fs-15 m-0 w-full">General Information</h4>
                             <div class="fs-14">
                                 <span class="c-grey">Full Name</span>
-                                <span>Osama Mohamed</span>
+                                <span>Haythm Ammar</span>
                             </div>
                             <div class="fs-14">
                                 <span class="c-grey">Gender:</span>
@@ -134,7 +134,7 @@
                             </div>
                             <div class="fs-14">
                                 <span class="c-grey">Country:</span>
-                                <span>Egypt</span>
+                                <span>Yemen</span>
                             </div>
                             <div class="fs-14">
                                 <label>
@@ -148,11 +148,11 @@
                             <h4 class="c-grey w-full fs-15 m-0">Personal Information</h4>
                             <div class="fs-14">
                                 <span class="c-grey">Email:</span>
-                                <span>o@nn.sa</span>
+                                <span>wuihayth@gmail.com</span>
                             </div>
                             <div class="fs-14">
                                 <span class="c-grey">Phone:</span>
-                                <span>019123456789</span>
+                                <span>0558961005</span>
                             </div>
                             <div class="fs-14">
                                 <span class="c-grey">Date Of Birth:</span>
@@ -179,7 +179,7 @@
                             </div>
                             <div class="fs-14">
                                 <span class="c-grey">Years Of Experience:</span>
-                                <span>15+</span>
+                                <span>1+</span>
                             </div>
                             <div class="fs-14">
                                 <label>
